--- a/djangular/scrumboard/templates/scrumboard/home.html
+++ b/djangular/scrumboard/templates/scrumboard/home.html
@@ -6,6 +6,9 @@
 	<body ng-app="scrumboard.demo">
 		{% verbatim %}
 		<div ng-controller="ScrumboardController">
+			<button ng-click="login()">Login</button>
+			<a href="/auth_api/logout">Logout</a>
+
 			<div class="list" ng-repeat="list in data">
 				<h3>{{ list.name }}</h3>
 				<ul>
@@ -25,7 +28,10 @@
 		{% endverbatim %}
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
 		<script src="{% static "scrumboard/scrumboard.js" %}"></script>
+		<script src="{% static "scrumboard/scrumboard.config.js" %}"></script>
+
 		<script src="{% static "scrumboard/card.directive.js" %}"></script>
+
 
 	</body>
 </html>
